Made some changes

--- a/<DOCTYPE html>.html
+++ b/<DOCTYPE html>.html
@@ -8,6 +8,7 @@
         <body>
             <p>
                 This is a sample webpage...
+                I am trying to push to git.
             </p>
         </body>
     </html>
